Sculpt spacing distance set to Scene breaks Space and Line Stroke Methods when object origin is not at world origin #69548

Closed
opened 2019-09-05 17:34:41 +02:00 by Floatharr · 5 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 10:52, hash: b6e7e173ec
Worked: Sculpt branch builds dbea6c3507a0 and ad5ac8c833ca (use world spacing)

Short description of error
Sculpt spacing distance set to Scene breaks Space and Line Stroke Methods when object pivot not at origin.
Only the first 1-2 dabs appear on the mesh. Using shift-s I can see that the cursor jumps to the side and stays there motionless.

Exact steps for others to reproduce the error
Default startup file, or load factory settings.

  1. Subdivide default cube
  2. Go to sculpt mode, Switch Spacing distance to Scene in the Stroke panel, everything still works
  3. Go to object mode and move the cube with G
  4. Switch to sculpt mode and try to sculpt, broken.
  5. Go to object mode and apply (or clear) location.
  6. Try to sculpt again, brush works

Can't reproduce on any of the 2.81 sculpt branch builds from https://blender.community/c/graphicall/ using the Use world spacing option.

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02 **Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 10:52, hash: `b6e7e173ec` Worked: Sculpt branch builds dbea6c3507a0 and ad5ac8c833ca (use world spacing) **Short description of error** Sculpt spacing distance set to Scene breaks Space and Line Stroke Methods when object pivot not at origin. Only the first 1-2 dabs appear on the mesh. Using shift-s I can see that the cursor jumps to the side and stays there motionless. **Exact steps for others to reproduce the error** Default startup file, or load factory settings. 1. Subdivide default cube 2. Go to sculpt mode, Switch Spacing distance to Scene in the Stroke panel, everything still works 3. Go to object mode and move the cube with G 4. Switch to sculpt mode and try to sculpt, broken. 5. Go to object mode and apply (or clear) location. 6. Try to sculpt again, brush works Can't reproduce on any of the 2.81 sculpt branch builds from https://blender.community/c/graphicall/ using the Use world spacing option.
Author

Added subscriber: @Floatharr

Added subscriber: @Floatharr
Floatharr changed title from Sculpt spacing distance set to Scene breaks Space and Line Stroke Methods when object pivot not at origin to Sculpt spacing distance set to Scene breaks Space and Line Stroke Methods when object origin is not at world origin 2019-09-05 23:48:31 +02:00

This issue was referenced by 6d8a86c07d

This issue was referenced by 6d8a86c07d5f5c290a9e606a7e03dccac9ddcf43
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Pablo Dobarro self-assigned this 2019-09-06 17:49:57 +02:00
Member

Fixed in 6d8a86c07d

Fixed in 6d8a86c07d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69548
No description provided.