Fix T69548: Sculpt scene spacing breaks when object pivot not at origin

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D5699